Freestyle renders wrong edges of objects which in the other RenderLayer #48320

Closed
opened 2016-04-30 07:36:36 +02:00 by Satoshi Yamasaki · 8 comments

System Information
Windows 8.1 pro x64, GTX660

Blender Version
Broken: 2.76b, 2.77a
Worked: 2.73

Short description of error
Freestyle renders wrong edges of objects which in the other RenderLayer when it goes out of camera.

Exact steps for others to reproduce the error

  1. Make two objects (A and B).
  2. Move "A" object to first Scene Layer, and also move "B" object to second (or somewhere but not first) Scene Layer.
  3. Set the Layer of the default RenderLayer in the scene to only first Scene Layer (where "A" object is).
  4. Add second RenderLayer to the scene and set the Layer to only second Scene Layer (where "B" object is).
  5. Make LineSets each RenderLayers.
  6. Enable Freestyle and "Full Sample" render option.
  7. Make an animation for "B" object to move it from the place in the active camera view to out of view.
  8. Render the animation.

When the frame that "B" object disappears (out of view), Freesyle renders the edges of it same as previous frame (where "B" object appeared in the view).

See also the attached file. (FreeStyleBug.zip)
Thanks,

**System Information** Windows 8.1 pro x64, GTX660 **Blender Version** Broken: 2.76b, 2.77a Worked: 2.73 **Short description of error** Freestyle renders wrong edges of objects which in the other RenderLayer when it goes out of camera. **Exact steps for others to reproduce the error** 1. Make two objects (A and B). 2. Move "A" object to first Scene Layer, and also move "B" object to second (or somewhere but not first) Scene Layer. 3. Set the Layer of the default RenderLayer in the scene to only first Scene Layer (where "A" object is). 4. Add second RenderLayer to the scene and set the Layer to only second Scene Layer (where "B" object is). 5. Make LineSets each RenderLayers. 6. Enable Freestyle and "Full Sample" render option. 7. Make an animation for "B" object to move it from the place in the active camera view to out of view. 8. Render the animation. When the frame that "B" object disappears (out of view), Freesyle renders the edges of it same as previous frame (where "B" object appeared in the view). See also the attached file. ([FreeStyleBug.zip](https://archive.blender.org/developer/F308166/FreeStyleBug.zip)) Thanks,
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki

Added subscribers: @kjym3, @Sergey

Added subscribers: @kjym3, @Sergey
Tamito Kajiyama was assigned by Sergey Sharybin 2016-05-03 10:57:43 +02:00

@kjym3, do you have time to look into this issue?

@kjym3, do you have time to look into this issue?

Thanks @Sergey, I will look into the reported issue.

Thanks @Sergey, I will look into the reported issue.

This issue was referenced by c8e9832be3

This issue was referenced by c8e9832be3ad2a86dc035a413a5be7469685636e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thank you for the fix!

Thank you for the fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48320
No description provided.